# FFmpegAPITutorial

./: .gitignore  CMakeLists.txt  README.md  build.sh
demo/: audio_decoder.cpp  audio_encoder.cpp  demuxer.cpp  muxer.cpp  video_decoder.cpp  video_encoder.cpp
dep/FFmpeg/include/libavutil/: ffversion.h
dep/FFmpeg/lib/: libavdevice.60.1.100.dylib  libavformat.60.3.100.dylib  libavutil.58.2.100.dylib  libpostproc.57.1.100.dylib  libswresample.4.10.100.dylib  libswscale.7.1.100.dylib
dep/FFmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
inc/: audio_decoder_core.h  audio_encoder_core.h  demuxer_core.h  io_data.h  muxer_core.h  video_decoder_core.h  video_encoder_core.h
output/: CMakeCache.txt  Makefile  cmake_install.cmake  demo.h264  video_encoder
src/: audio_decoder_core.cpp  audio_encoder_core.cpp  demuxer_core.cpp  io_data.cpp  muxer_core.cpp  video_decoder_core.cpp  video_encoder_core.cpp  vodeo_decoder_core.cpp
